Progetto/styles/base.css
body {
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color:beige;
}

/* Header */
header {
    position: fixed;
    top: 0;
    width: 100%;
    height: 100px;
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content:space-between;
}

header>img.logo {
    height: 100%;
}

header>.accounting {
    margin-right: 20px;
}

button#login,
button#register,
.dropdown button {
    border: none;
    padding: 10px 20px;
    font-size: 16px;
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

button#login,
button#register:hover{
    cursor: pointer;
}

button#login {
    background-color: #04AA6D;
    color: white;
    margin-right: 10px;
}

button#register {
    background-color: #fff;
}

div#profile
{
  padding-right: 10px;
  border-radius: 30px;
  display: flex;
  align-items: center;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

img#user
{
  height: 50px;
}

.dropdown {
  top: 75px;
  right: 50px;
  display: none;
  position: absolute;
  border-top: 10px solid transparent;
}

.dropdown button
{
  background-color: #efa926;
  color: white;
}

div#profile:hover .dropdown
{
  display: block;
}

/* Navbar */
nav {
    top: 100px;
    position: fixed;
    display: flex;
    background-color: #333;
    width: 100%;
    height: 40px;
    z-index: -1;
}

nav>a.nav-item {
    color: #f2f2f2;    
    text-decoration: none;
    padding: 7px 15px;
}

nav>a.nav-item:hover {
    background-color: #555;
}

nav>a.nav-item.active {
    background-color: #04AA6D;
}

/* Page Content */
.content {
    margin: 30px 20px;
    margin-top: 150px;
    flex-grow: 1;
    z-index: -2;
}

.image-grid {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  .row {
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
  }
  
  .image-container {
    margin: 10px;
  }
  
  .image-container img {
    width: 200px;
    height: 250px;
    object-fit: cover;
    border-radius: 10px;
  }
  
  .image-container p {
    font-size: 16px;
    color: #666;
    margin-top: 10px;
  }
  .faq-container {    
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
  }
  
  .faq-question {
    margin-bottom: 10px;
  }
  
  .faq-question h3 {
    display: inline-block;
    margin-right: 10px;
    color: #333;
  }
  
  .faq-question span {
    display: inline-block;
    width: 20px;
    height: 20px;
    background-color: #333;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    line-height: 20px;
    font-size: 14px;
    vertical-align: middle;
  }  
  .faq-question p {
    color: #666;
    font-size: 16px;
    line-height: 1.5;
    margin-left: 10px;
  }
/* Footer */
footer {
    background-color: #1f1f1f;
    padding: 10px 20px;
    color: #f2f2f2;
}

/* Error tab */

.errorContainer
{
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    backdrop-filter: blur(20px);
    justify-content: center;
    align-items: center;
}

.error
{
    background-color: #fff;
    font-size: 1.5em;
    margin: 10px;
    display: flex;
    flex-direction: column;
    width: 500px;
    padding: 20px 50px;
    text-align: center;
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.button
{
    background-color: rgb(112, 242, 125);
    color: white;
    font-size: 1.1em;
    text-decoration: none;
    margin: 10px;
    padding: 10px 20px;
    border-radius: 30px;
}

